force-app/main/default/objects/Student_Profile_Message__mdt/Student_Profile_Message__mdt.object-meta.xml
<CustomObject>
    <description>Contains text to display at the top of the various student profile tabs</description>
    <label>Student Profile Message</label>
    <pluralLabel>Student Profile Messages</pluralLabel>
</CustomObject>