force-app/main/default/objects/Student_Profile_Message__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, then this message will not appear on the page</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>