force-app/main/default/objects/Student_Profile_Message__mdt/fields/Message_to_Display__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Display__c</fullName>
    <description>Contains the text to display on the student profile</description>
    <label>Message to Display</label>
    <length>52000</length>
    <type>LongTextArea</type>
</CustomField>