force-app/main/default/objects/Student_Profile_Message__mdt/fields/Student_Profile_Tab__c.field-meta.xml
<CustomField>
    <fullName>Student_Profile_Tab__c</fullName>
    <description>Which tab the message will appear on</description>
    <label>Student Profile Tab</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Classes</fullName>
            </value>
            <value>
                <fullName>Finances</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
            </value>
            <value>
                <fullName>Career Development</fullName>
            </value>
            <value>
                <fullName>Undergraduate Academics</fullName>
            </value>
            <value>
                <fullName>Undergraduate Indicators</fullName>
            </value>
            <value>
                <fullName>Graduate Academics</fullName>
            </value>
            <value>
                <fullName>Graduate Indicators</fullName>
            </value>
            <value>
                <fullName>Care and Concern</fullName>
            </value>
            <value>
                <fullName>Student Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>